syntax = "proto3";

package callmanager;

option java_string_check_utf8 = true;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_package = "cc.web3e.protobuf.callmanager";
option java_outer_classname = "ContextProto";

import "common/common.proto";
import "google/protobuf/empty.proto";

service ContextService {
  rpc ListContexts (common.ListRequest) returns (common.BaseItemsList) {};
  rpc GetContext (common.IdMessage) returns (ContextMessage) {};
  rpc SetContext (ContextMessage) returns (ContextMessage) {};
  rpc ToggleContext (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc RemoveContext (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc SyncContextsCache (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message ContextMessage {
  // @format uuid
  // @default "00000000-0000-0000-0000-000000000000"
  string id = 1;
  // @default true
  bool is_enabled = 2;
  string name = 3;
  optional string description = 4;
}

